--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ nav ul li {display: inline; margin-right: 10px;}
 nav a {text-decoration:none; color:#007bff; font-size: 18px;}
 nav a:hover { text-decoration: underline; color: #0056b3;}
 h3#header {float: left; font-size: 30px;}
-#header a { text-decoration:none; color:#868396;}
+#header a { text-decoration:none; color:#868e96;}
 #header a:hover {text-decoration: underline;}
 main { margin-top: 20px;}
 div.jumbotron {border-radius: 5px; background-color: #e9ecef; padding: 10px; text-align: center;}
