--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ main { margin-top: 20px;}
 div.jumbotron {border-radius: 5px; background-color: #e9ecef; padding: 10px; text-align: center;}
 .jumbotron h1 {font-size: 60px;}
 .jumbotron p {font-size: 20px; padding: 0 40px 0 40px; line-height: 40px;}
-div.questoins{padding:0 20px 0 20px;}
+div.questions {padding:0 20px 0 20px;}
 div.questions h4 {font-size: 30px; margin-bottom: 10px;}
 div.questions p {margin-top: 30px;}
 div.questions a.btn { border-radius: 5px; color:#fff; background-color:#007bff; border-color: #007bff; text-decoration: none; padding: 18px; font-size: 20px;}
